add huawei security product page

--- a/ittech/cloud/orange/orangecloud.html
+++ b/ittech/cloud/orange/orangecloud.html
@@ -52,10 +52,9 @@
 				<a href="../../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
 				<h1 class="mb-2 bread">Orange云技术解决方案</h1>
 				<p class="breadcrumbs">
-				<p>
-					<a href="../cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
-					<a href="../../network/network.html" class="btn btn-info px-4 py-3"> 企业网络解决方案</a>
-					<a href="../../security/security.html" class="btn btn-info px-4 py-3"> 企业安保解决方案</a>
+					<span class="mr-2"><a href="../../cloud/cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 				</p>
 			</div>
 		</div>
