--- a/ittech/network/network.html
+++ b/ittech/network/network.html
@@ -73,7 +73,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="huawei/huaweinetwork.html">华为企业网解决方案</a></h3>
-						<p>华为云持续创新，携手客户，让云无处不在，让智能无所不及，共建智能世界云底座。提供给租户安全的云产品和服务，构建安全可信的云服务。</p>
+						<p>引领数字基础设施，共创行业新价值。携手伙伴，深入场景，为客户创造价值，以创新基础设施，释放数字生产力。</p>
 					</div>
 				</div>
 			</div>
@@ -87,10 +87,8 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="ruijie/ruijienwtwork.html">锐捷网络解决方案</a></h3>
-						<p>Orange Business Services，作为法国知名电信运营商Orange旗下的B2B分支机构，Orange Business Services扮演着网络运营商和数字服务集成商的角色，
-							在IoT、云计算、大数据和人工智能、应用开发和网络安全等领域提供专业服务。
-							Orange Business Services长期重视创新技术，业务涵盖云技术、数字化与数据、网络、智能移动服务等多个领域，是拥有多源服务集成（MSI）专业能力的全球运营商级集成商。</p>
+						<h3 class="heading"><a href="ruijie/ruijienwtwork.html">锐捷网络产品</a></h3>
+						<p>让技术与应用充分融合，创造性地解决客户问题，促进社会进步。</p>
 					</div>
 				</div>
 			</div>
