--- a/ittech/security/dahua/dahua.html
+++ b/ittech/security/dahua/dahua.html
@@ -62,19 +62,259 @@
 	</div>
 </section>
 
-<section class="ftco-section">
+
+
+<section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+		<div class="row wrapper">
 
-				<p>
+			<div class="col-md-12 col-lg-4 ftco-animate wrapper align-items-end" style="align-items: center">
+				<div class="blog-entry align-items-end">
+					<a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1" class="block-20 d-flex align-items-end" style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316025866232wm4jn.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧建筑</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1&amp;area=1800">智慧园区</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1&amp;area=1813">智慧小区</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1&amp;area=1814">智慧物业</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1&amp;area=1817">智慧写字楼</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1&amp;area=1815">智慧综合体</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1&amp;area=1816">智慧酒店</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1810.html?belong=1&amp;area=1811">智慧工地</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry align-items-end">
+					<a href="https://www.dahuatech.com/cases/lists/1826.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316026002189067cv.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧教育</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1826.html?belong=1&amp;area=1828">智慧后勤</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1826.html?belong=1&amp;area=1827">智慧安保</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1826.html?belong=1&amp;area=1868">智慧教学</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316026175438fj1a3.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧制造</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1802">3C电子生产</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1806">家电生产</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1803">汽车及配件生产</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1807">机械装备制造</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1804">服装纺织</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1805">家具建材</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1809">医药及医疗器械</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1808">食品饮料酒水</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1818.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316026350461bvet5.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧物流</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1802">3C电子生产</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1806">家电生产</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1803">汽车及配件生产</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1807">机械装备制造</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1804">服装纺织</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1805">家具建材</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1809">医药及医疗器械</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1801.html?belong=1&amp;area=1808">食品饮料酒水</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1839.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/22/1632309673153674jgd.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧农产</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1839.html?belong=1&amp;area=1840">智慧养殖</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1831.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/22/16323097391139dlrrq.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧能源</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1831.html?belong=1&amp;area=1832">智慧电力</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1831.html?belong=1&amp;area=1833">石油化工</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1831.html?belong=1&amp;area=1835">智慧煤炭</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1831.html?belong=1&amp;area=1834">智慧冶金</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1824.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316026941085yvl4j.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">商业连锁</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1824.html?belong=1&amp;area=1825">商业连锁</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1829.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316027087391tna5r.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧金融</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1829.html?belong=1&amp;area=1830">安全管理</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1829.html?belong=1&amp;area=1862">网点管理</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1829.html?belong=1&amp;area=1877">行政管理</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1829.html?belong=1&amp;area=1861">业务管控</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1829.html?belong=1&amp;area=1863">场景金融</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1836.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316027208074ja7on.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">智慧文旅</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1836.html?belong=1&amp;area=1838">文博古建</a></li>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1836.html?belong=1&amp;area=1837">智慧景区</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
 
-				</p>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.dahuatech.com/cases/lists/1841.html?belong=1" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316027369431zjoed.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">医疗卫生</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.dahuatech.com/cases/lists/1841.html?belong=1&amp;area=1842">智慧医院</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
 
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://mall.dahuatech.com/#/solutionsCenter/solutionList" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/16316027516347zl5su.png');">
+						<div class="meta-date text-center p-2">
+							<span class="day">医疗卫生</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://mall.dahuatech.com/#/solutionsCenter/solutionList">查看所有方案</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.cloud-dahua.com/" class="block-20 d-flex align-items-end"
+					   style="background-image: url('https://dahuachinesewebsite.oss-cn-hangzhou.aliyuncs.com/upload/2021/09/14/1631603038434184xod.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">大华云睿业务</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<ul>
+							<li class="ellipsis"><a href="https://www.cloud-dahua.com/">查看所有方案</a></li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+</section>
 
+
+<section class="ftco-intro" style="background-image: url(../../network/network.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<a href="https://www.hikvision.com/cn/solutions/"><h2>更多产品信息请点击查看海康威视官网</h2></a>
+				<h2>联系我们的专家 为您竭诚服务</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../../images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../../images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 
