--- a/ittech/security/security.html
+++ b/ittech/security/security.html
@@ -62,9 +62,9 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div class="row" class = "wrapper">
+		<div class="row wrapper">
 
-			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-6 ftco-animate wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="hikvision/hikvision.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/security/hikvision/1.jpg');">
 						<div class="meta-date text-center p-2">
