--- a/products/network/huawei/huaweinetwork.html
+++ b/products/network/huawei/huaweinetwork.html
@@ -49,157 +49,19 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<a href="../../../ittech.html"><h4 class="mb-2 bread">企业IT技术</h4></a>
-				<h1 class="mb-2 bread">华为企业网技术解决方案</h1>
+				<a href="../../../products.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
+				<h1 class="mb-2 bread">华为网络设备</h1>
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="../../cloud/cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="../../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="../../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
 				</p>
 			</div>
 		</div>
 	</div>
 </section>
-
-
-
-<section class="ftco-section bg-light">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 text-center heading-section ftco-animate">
-				<br>
-				<h2 class="mb-4"><span>华为企业业务产品组合</span></h2>
-			</div>
-		</div>
-
-		<div class="row wrapper">
-
-			<div class="col-md-5 col-lg-3 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<div class="z_right e-link-box">
-						<div class="li1">
-							<div class="md" id="zh1"></div>
-							<h3 class="title1 text-center">
-								<a href="https://e.huawei.com/cn/solutions/campus" class="e-link-black-16-3">
-									<span class="text">智慧园区 </span>
-									<span class="iconfont icon-xiala1"></span>
-								</a>
-							</h3>
-							<ul class="z_cpzh1">
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/office-network">极简办公网</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/production-network">融合生产网</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/edge">智能型边缘</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/iot-edge">物联型边缘</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/platform">园区数字平台</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/office-meeting">智能办公会议</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/security">园区轻量化安防</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/campus/intelligent-security">园区智慧安防</a></li>
-
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-5 col-lg-3 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<div class="z_right e-link-box">
-						<div class="li1">
-							<div class="md" id="zh2"></div>
-							<h3 class="title1 text-center">
-								<a href="https://e.huawei.com/cn/solutions/data-center" class="e-link-black-16-3">
-									<span class="text">数据中心</span>
-									<span class="iconfont icon-xiala1"></span>
-								</a>
-							</h3>
-							<ul class="z_cpzh1">
-
-								<li><a href="https://e.huawei.com/cn/solutions/data-center/centralized-data-center">集中式云数据中心产品组合方案</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/data-center/multi-level-data-center">多级数据中心产品组合方案</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/data-center/small-data-center">小型数据中心产品组合方案</a></li>
-
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-5 col-lg-3 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<div class="z_right e-link-box">
-						<div class="li1">
-							<div class="md" id="zh3"></div>
-							<h3 class="title1 text-center">
-								<a href="https://e.huawei.com/cn/solutions/digital-site" class="e-link-black-16-3">
-									<span class="text">数字站点</span>
-									<span class="iconfont icon-xiala1"></span>
-								</a>
-							</h3>
-							<ul class="z_cpzh1">
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/intelligent-edge-station">综合数字场站</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/intelligent-sharing-rod">智慧共享杆站</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/line-inspection-site">线路巡检站</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/perimeter-protection-site">周界防护站</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/radar-video-convergence-site">雷视管控杆站</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/remote-monitoring-pole-site">边远监测杆站</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/video-based-controlling-pole-site">视频管控杆站</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/digital-site/tunnel-monitoring-site">隧道监测站</a></li>
-
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-md-5 col-lg-3 ftco-animate card wrapper" style="align-items: self-start" >
-				<div class="blog-entry">
-					<div class="z_right e-link-box">
-						<div class="li1">
-							<div class="md" id="zh4"></div>
-							<h3 class="title1 text-center">
-								<a href="https://e.huawei.com/cn/solutions/wan" class="e-link-black-16-3">
-									<span class="text">广域网络</span>
-									<span class="iconfont icon-xiala1"></span>
-								</a>
-							</h3>
-							<ul class="z_cpzh1 ">
-
-								<li><a href="https://e.huawei.com/cn/solutions/wan/e-government-network">政务办公网</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/wan/enterprise-wan-networks">企业IP承载网</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/wan/industry-wan">广域生产网</a></li>
-
-								<li><a href="https://e.huawei.com/cn/solutions/wan/service-oriented">广域网络服务化</a></li>
-
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
 
 
 
@@ -1572,7 +1434,7 @@
 
 
 
-<section class="ftco-intro" style="background-image: url(../../network/network.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-intro" style="background-image: url(../../../ittech/network/network.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
