--- a/products/network/network.html
+++ b/products/network/network.html
@@ -57,87 +57,58 @@
 					<span class="mr-2"><a href="../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
 					<span class="mr-2"><a href="../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
+				</p>
+			</div>
         </div>
     </div>
 </section>
 
 
-
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
+		<div class="row" class = "wrapper">
 
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
+			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/x90-pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x90pro.jpg');">
+					<a href="huawei/huaweinetwork.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/network/huawei/1.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">1099€</span>
-							<span class="yr">5台起售</span>
+							<span class="yr">NEW</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="https://www.vivo.com/es/products/x90-pro">VIVO X90 Pro</a></h3>
-						<p href="products/mobile/mobile.html">VIVO X系列2023新款高档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/x90-pro" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
+						<h3 class="heading"><a href="huawei/huaweinetwork.html">华为企业业务产品</a></h3>
+						<p>引领数字基础设施，共创行业新价值。携手伙伴，深入场景，为客户创造价值，以创新基础设施，释放数字生产力。</p>
 					</div>
 				</div>
 			</div>
 
 
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-6 ftco-animate">
 				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
+					<a href="ruijie/ruijienwtwork.html" class="block-20 d-flex align-items-end" style="background-image: url('../../ittech/network/ruijie/1.jpg');">
 						<div class="meta-date text-center p-2">
-							<span class="day">NEW</span>
-							<span class="day">359€</span>
-							<span class="yr">5台起售</span>
+							<span class="yr">NEW</span>
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/v29-lite-5g" class="heading"><a href="#">VIVO V29 Lite</a></h3>
-						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="https://www.vivo.com/es/products/v29-lite-5g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-							<p class="ml-auto mb-0">
-							</p>
-						</div>
+						<h3 class="heading"><a href="ruijie/ruijienwtwork.html">锐捷网络产品</a></h3>
+						<p>让技术与应用充分融合，创造性地解决客户问题，促进社会进步。</p>
 					</div>
 				</div>
 			</div>
-
-
-			<div class="col-md-6 col-lg-4 ftco-animate">
-				<div class="blog-entry">
-					<a href="https://www.vivo.com/es/products/y35" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y35.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">New</span>
-							<span class="day">235€</span>
-							<span class="yr">5台起售</span>
-						</div>
-					</a>
-					<div class="text bg-white p-4">
-						<h3 href="https://www.vivo.com/es/products/y35" class="heading"><a href="#">VIVO Y35</a></h3>
-						<p>VIVO Y系列2023新款低档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
-						<div class="d-flex align-items-center mt-4">
-							<p  class="mb-0"><a href="https://www.vivo.com/es/products/y35" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-
+		</div>
 	</div>
 </section>
 
 
-<section class="ftco-intro" style="background-image: url(../../images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+
+<section class="ftco-intro" style="background-image: url(../../ittech/network/network.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
+				<h2>释放数字生产力 共创行业新价值</h2>
+				<br>
 				<h2>商业洽谈请扫码联系</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
@@ -164,57 +135,6 @@
 		</div>
 	</div>
 </section>
-
-
-
-
-
-<!--<section class="ftco-gallery">-->
-<!--	<div class="container-wrap">-->
-<!--		<div class="row no-gutters">-->
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_1.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_2.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_2.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-
-<!--			<div class="col-md-3 ftco-animate">-->
-<!--				<a href="../../images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../images/image_2.jpg);">-->
-<!--					<div class="icon mb-4 d-flex align-items-center justify-content-center">-->
-<!--						<span class="icon-instagram"></span>-->
-<!--					</div>-->
-<!--				</a>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</section>-->
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -341,4 +261,5 @@
 
     gtag('config', 'UA-23581568-13');
 </script>
+</body>
 </html>
