--- a/products/network/ruijie/ruijienwtwork.html
+++ b/products/network/ruijie/ruijienwtwork.html
@@ -49,13 +49,14 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<a href="../../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
-				<h1 class="mb-2 bread">海康威视安防技术解决方案</h1>
+				<a href="../../../ittech.html"><h3 class="mb-2 bread">渠道拓展</h3></a>
+				<h1 class="mb-2 bread">锐捷网络产品</h1>
 				<p class="breadcrumbs">
-				<p>
-					<a href="../../cloud/cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
-					<a href="../../network/network.html" class="btn btn-info px-4 py-3"> 企业网络解决方案</a>
-					<a href="../../security/security.html" class="btn btn-info px-4 py-3"> 企业安保解决方案</a>
+					<span class="mr-2"><a href="../../mobile/mobile.html">智能手机 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../network/network.html">网络设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../security/security.html">安防设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../solar/solar.html">光伏设备 <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../battery/battery.html">储能设备 <i class="ion-ios-arrow-forward"></i></a></span>
 				</p>
 			</div>
 		</div>
@@ -64,167 +65,96 @@
 
 
 
-<section class="ftco-section">
+<section class="ftco-section bg-light">
 	<div class="container">
-<!--		<div class="row">-->
-<!--			<div class="col-md-12 text-center heading-section ftco-animate">-->
-<!--				<br>-->
-<!--				<h2 class="mb-4"><span>解决方案</span></h2>-->
-<!--			</div>-->
-<!--		</div>-->
+		<div class="row">
+			<div class="col-md-12 text-center heading-section ftco-animate">
+				<br>
+				<h2 class="mb-4"><span>锐捷网络产品</span></h2>
+			</div>
+		</div>
+
 		<div class="row wrapper">
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Goverment-Affair-and-livelihood-of-people/" class="block-20 d-flex align-items-end" style="background-image: url('政务民生.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">政务民生</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Intelligent-Court/" class="block-20 d-flex align-items-end" style="background-image: url('智慧法院.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">智慧法院</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
-					</a>
-				</div>
-			</div>
 
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Intelligent-Transportation1/" class="block-20 d-flex align-items-end" style="background-image: url('智慧交管.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">智慧交管</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/jh/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6a09b6c744b14bd980640ec5b4e7847b.svg" alt="交换机" title="交换机"></div>
+						<div class="ws-procenter-title"><h2>交换机</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
 
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Transportation/" class="block-20 d-flex align-items-end" style="background-image: url('交通运输.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">交通运输</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wx/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/a6b569c1ed5b46b289ef88794cd7e3d5.svg" alt="无线" title="无线"></div>
+						<div class="ws-procenter-title"><h2>无线</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/ParkingOperation/" class="block-20 d-flex align-items-end" style="background-image: url('停车运营.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">停车运营</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ykt/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/cf54784e8f4f4ae98044ff8a21b735f9.svg" alt="云桌面" title="云桌面"></div>
+						<div class="ws-procenter-title"><h2>云桌面</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
-
-
-
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Education-and-Teaching/" class="block-20 d-flex align-items-end" style="background-image: url('教育教学.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">教育教学</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/aq/" target="_blank" style="margin: 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/671b1cd62b6944d9b6e312ca41ac9cb9.svg" alt="安全" title="安全"></div>
+						<div class="ws-procenter-title"><h2>安全</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Healthcare/" class="block-20 d-flex align-items-end" style="background-image: url('医疗卫生.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">医疗卫生</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ly/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/a9e7ad5ec5134085b924e5aa600b3ed1.svg" alt="路由器" title="路由器"></div>
+						<div class="ws-procenter-title"><h2>路由器</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Culture-Tourism/" class="block-20 d-flex align-items-end" style="background-image: url('文化旅游.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">文化旅游</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wlw/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6d2899b1aa1c4166a2963b2cfb81f615.svg" alt="物联网" title="物联网"></div>
+						<div class="ws-procenter-title"><h2>物联网</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Residential-Building/" class="block-20 d-flex align-items-end" style="background-image: url('住宅建筑.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">住宅建筑</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/zhjs/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/7d60c5caa9894f1f80431846958a3de8.svg" alt="智慧教室" title="智慧教室"></div>
+						<div class="ws-procenter-title"><h2>智慧教室</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Commercial-Real-Estate/" class="block-20 d-flex align-items-end" style="background-image: url('商业地产.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">商业地产</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/riil/" target="_blank" style="margin: 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/2cf09e18822f4f78b9bb344825155fcb.svg" alt="RIIL(统一运维)" title="RIIL(统一运维)"></div>
+						<div class="ws-procenter-title"><h2>RIIL(统一运维)</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
 				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Digital-Energy/" class="block-20 d-flex align-items-end" style="background-image: url('数字能源.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">数字能源</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/Financial-Service/" class="block-20 d-flex align-items-end" style="background-image: url('金融服务.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">金融服务</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/SMB/Small-and-Medium-Sized-Retail-Shops/" class="block-20 d-flex align-items-end" style="background-image: url('中小商铺.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">中小商铺</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/SMB/Small-and-Medium-Sized-Enterprises/" class="block-20 d-flex align-items-end" style="background-image: url('中小园区.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">中小园区</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
-					</a>
-				</div>
-			</div>
-			<div class="col-md-5 col-lg-4 ftco-animate wrapper" style="align-items: center">
-				<div class="blog-entry">
-					<a href="https://www.hikvision.com/cn/solutions/SMB/Small-and-Micro-Enterprises/" class="block-20 d-flex align-items-end" style="background-image: url('小微企业.jpg');">
-						<div class="meta-date text-center p-2">
-							<span class="day">小微企业</span>
-							<div class="product-detial">了解更多<span></span></div>
-						</div>
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/yyxt/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6c7c748ff9924bcebc61e3f043b2ec91.svg" alt="身份管理" title="身份管理"></div>
+						<div class="ws-procenter-title"><h2>身份管理</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
 					</a>
 				</div>
 			</div>
@@ -235,13 +165,12 @@
 
 
 
-
-<section class="ftco-intro" style="background-image: url(../../network/network.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-intro" style="background-image: url(../../../ittech/network/network.jpg);" data-stellar-background-ratio="0.5">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 suscribete_form">
-				<a href="https://www.hikvision.com/cn/solutions/"><h2>更多产品信息请点击查看海康威视官网</h2></a>
+				<a href="https://www.ruijie.com.cn"><h2>更多产品信息请点击查看锐捷网络官网</h2></a>
 				<h2>联系我们的专家 为您竭诚服务</h2>
 				<div class="container-wrap">
 					<div class="row no-gutters">
@@ -269,7 +198,6 @@
 	</div>
 </section>
 
-
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
 		<div class="row mb-5">
@@ -287,8 +215,12 @@
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
 						</ul>
 					</div>
+
+
 				</div>
 			</div>
+
+
 
 			<div class="col-md-6 col-lg-3">
 				<div class="ftco-footer-widget mb-5">
@@ -347,7 +279,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<p>
-					Copyright &copy;<script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made by <a href="https://www.brainoceaninternational.com" target="_blank">Brain Ocean International S.L.</a>
 				</p>
 			</div>
