--- a/ittech/network/ruijie/ruijienwtwork.html
+++ b/ittech/network/ruijie/ruijienwtwork.html
@@ -52,32 +52,334 @@
 				<a href="../../../ittech.html"><h3 class="mb-2 bread">企业IT技术</h3></a>
 				<h1 class="mb-2 bread">锐捷网络技术解决方案</h1>
 				<p class="breadcrumbs">
-				<p>
-					<a href="../../cloud/cloud.html" class="btn btn-info px-4 py-3"> 云技术解决方案</a>
-					<a href="../../network/network.html" class="btn btn-info px-4 py-3"> 企业网络解决方案</a>
-					<a href="../../security/security.html" class="btn btn-info px-4 py-3"> 企业安保解决方案</a>
+					<span class="mr-2"><a href="../../cloud/cloud.html"> 云技术解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../network/network.html"> 企业网络解决方案<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="../../security/security.html"> 企业安保解决方案<i class="ion-ios-arrow-forward"></i></a></span>
 				</p>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section class="ftco-section">
+
+
+<section class="ftco-section bg-light">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+			<div class="col-md-12 text-center heading-section ftco-animate">
+				<br>
+				<h2 class="mb-4"><span>行业解决方案</span></h2>
+			</div>
+		</div>
 
-				<p>
-				</p>
+		<div class="row wrapper">
 
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/yys/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/3180d83393ea47fca0d0fe54c74aa5c2.svg" alt="运营商" title="运营商">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/yys/" target="_blank">
+							<h2 class="tag-title" title="运营商">运营商</h2>
+							<div class="tag-content" style="overflow: hidden;">中国移动、中国电信、中国联通的数通产品主流供应商，并与广...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/yys/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/zhf/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/16bc61059c18443a85f8a39555cfae3e.svg" alt="政府" title="政府">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/zhf/" target="_blank">
+							<h2 class="tag-title" title="政府">政府</h2>
+							<div class="tag-content" style="overflow: hidden;">服务政务行业10年，从政务专网、信息安全、运维服务、数...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/zhf/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/jr/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/d268fdc1dc0f4686bfe3c07802c6bb4b.svg" alt="金融" title="金融">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/jr/" target="_blank">
+							<h2 class="tag-title" title="金融">金融</h2>
+							<div class="tag-content" style="overflow: hidden;">深耕金融行业近20年，用深入场景的创新方案为金融机构提供...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/jr/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/hlw/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/e692c1d60e3548988ce81ab9d7c4b4ed.svg" alt="互联网" title="互联网">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/hlw/" target="_blank">
+							<h2 class="tag-title" title="互联网">互联网</h2>
+							<div class="tag-content" style="overflow: hidden;">互联网行业网络解决方案主流供应商，截至目前服务的互联网企...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/hlw/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/dl/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/0d41c01000c14d6da492b63bcb1a3a29.svg" alt="电力能源" title="电力能源">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/dl/" target="_blank">
+							<h2 class="tag-title" title="电力能源">电力能源</h2>
+							<div class="tag-content" style="overflow: hidden;">先后服务于国家电网、中石油、中石化、南方电网、大唐集团等...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/dl/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/qy/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/f2ce454d30c04eb5bb70909ba5855d1b.svg" alt="制造业" title="制造业">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/qy/" target="_blank">
+							<h2 class="tag-title" title="制造业">制造业</h2>
+							<div class="tag-content" style="overflow: hidden;">锐捷网络扎根企业行业，深入企业办公、加工制造、物流仓储等...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/qy/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/gj/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/ba6968559a0b43978ddf8824afdf925c.svg" alt="高教/职教" title="高教/职教">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/gj/" target="_blank">
+							<h2 class="tag-title" title="高教/职教">高教/职教</h2>
+							<div class="tag-content">服务全国2600余所高校，其中双一流高校全覆</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/gj/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/pj/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/b07f30d69b724ef19ac22b2487893def.svg" alt="普教" title="普教">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/pj/" target="_blank">
+							<h2 class="tag-title" title="普教">普教</h2>
+							<div class="tag-content" style="overflow: hidden;">服务全国 600 余个教育城域网、50000余所中小学及幼儿园、1...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/pj/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/yl/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/3e5f5412ba2b47b9b0c54ff154d5d652.svg" alt="医疗卫生" title="医疗卫生">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/yl/" target="_blank">
+							<h2 class="tag-title" title="医疗卫生">医疗卫生</h2>
+							<div class="tag-content" style="overflow: hidden;">锐捷网络凭借医疗卫生信息化建设领域的长期探索和实践，深入...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/yl/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/jt/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/86857766577c4ef58677b2001abaab77.svg" alt="交通" title="交通">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/jt/" target="_blank">
+							<h2 class="tag-title" title="交通">交通</h2>
+							<div class="tag-content" style="overflow: hidden;">深耕交通行业数年，基于交通多样化应用场景，推出定制化解决...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/jt/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/jzhdch/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/5aca4e2abce6403e8b9e088f30081cb3.svg" alt="地产酒店文旅·连锁服<br class='tag-title-br'/>务·场馆园区" title="地产酒店文旅·连锁服<br class='tag-title-br'/>务·场馆园区">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/jzhdch/" target="_blank">
+							<h2 class="tag-title" title="地产酒店文旅·连锁服<br class='tag-title-br'/>务·场馆园区">地产酒店文旅·连锁服<br class="tag-title-br">务·场馆园区</h2>
+							<div class="tag-content" style="overflow: hidden;">性能强劲的Wi-Fi部署，多维度评估经营能力，精准提升运营模...</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/jzhdch/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a href="https://www.ruijie.com.cn/fa/ggaq/" class="sol-img" target="_blank">
+						<img class="" src="https://www-file.ruijie.com.cn/other/2023/04/18/0c12f2e39c594f91a6e9ef3439e66234.svg" alt="公共安全" title="公共安全">
+					</a>
+					<div class="tag-all">
+						<a href="https://www.ruijie.com.cn/fa/ggaq/" target="_blank">
+							<h2 class="tag-title" title="公共安全">公共安全</h2>
+							<div class="tag-content">场景创新为公共安全保驾护航，受到行业用户广泛信赖与认可</div>
+						</a>
+						<a href="https://www.ruijie.com.cn/fa/ggaq/" target="_blank" class="view-solution">查看方案</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-
 </section>
 
 
 
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center heading-section ftco-animate">
+				<br>
+				<h2 class="mb-4"><span>锐捷网络产品</span></h2>
+			</div>
+		</div>
+
+		<div class="row wrapper">
+
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/jh/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6a09b6c744b14bd980640ec5b4e7847b.svg" alt="交换机" title="交换机"></div>
+						<div class="ws-procenter-title"><h2>交换机</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wx/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/a6b569c1ed5b46b289ef88794cd7e3d5.svg" alt="无线" title="无线"></div>
+						<div class="ws-procenter-title"><h2>无线</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ykt/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/cf54784e8f4f4ae98044ff8a21b735f9.svg" alt="云桌面" title="云桌面"></div>
+						<div class="ws-procenter-title"><h2>云桌面</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/aq/" target="_blank" style="margin: 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/671b1cd62b6944d9b6e312ca41ac9cb9.svg" alt="安全" title="安全"></div>
+						<div class="ws-procenter-title"><h2>安全</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/ly/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/a9e7ad5ec5134085b924e5aa600b3ed1.svg" alt="路由器" title="路由器"></div>
+						<div class="ws-procenter-title"><h2>路由器</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/wlw/" target="_blank" style="margin: 7px 1.3% 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6d2899b1aa1c4166a2963b2cfb81f615.svg" alt="物联网" title="物联网"></div>
+						<div class="ws-procenter-title"><h2>物联网</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/zhjs/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/7d60c5caa9894f1f80431846958a3de8.svg" alt="智慧教室" title="智慧教室"></div>
+						<div class="ws-procenter-title"><h2>智慧教室</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/riil/" target="_blank" style="margin: 7px 0px;">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/2cf09e18822f4f78b9bb344825155fcb.svg" alt="RIIL(统一运维)" title="RIIL(统一运维)"></div>
+						<div class="ws-procenter-title"><h2>RIIL(统一运维)</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-5 col-lg-4 ftco-animate card wrapper" style="align-items: self-start" >
+				<div class="blog-entry">
+					<a class="ws-procenter-box" href="https://www.ruijie.com.cn/cp/yyxt/" target="_blank">
+						<div class="ws-pro-img"><img src="https://www-file.ruijie.com.cn/other/2023/04/18/6c7c748ff9924bcebc61e3f043b2ec91.svg" alt="身份管理" title="身份管理"></div>
+						<div class="ws-procenter-title"><h2>身份管理</h2></div>
+						<div class="wsp-view-more ws-procenter-more">查看更多</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+
+<section class="ftco-intro" style="background-image: url(../../network/network.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<a href="https://www.ruijie.com.cn"><h2>更多产品信息请点击查看锐捷网络官网</h2></a>
+				<h2>联系我们的专家 为您竭诚服务</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../../images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../../images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(../../../images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="../../../images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
